Changed fallback font-family

--- a/plus theme.css
+++ b/plus theme.css
@@ -166,7 +166,7 @@
 /*  $1 - Resets                                                     */
 /* ================================================================ */
 html {
-    font-family: 'Gotham';
+    font-family: 'Gotham', Arial;
     font-weight: 300;
 }
 
