Changed primary color

--- a/plus theme.css
+++ b/plus theme.css
@@ -157,8 +157,8 @@
 
 /* Changed CSS variables to adapt the Theme to the PLUS branding */
 :root {
-    --color-primary: #227647;
-    --color-secondary: #80bd1d;
+    --color-primary: #c22;
+    --color-secondary: #c22;
 }
 
 
